# pypibt

./: .gitignore  OPTIMIZATION_GUIDE.md  README.md  benchmark_comprehensive.py  benchmark_final.py  benchmark_hindrance.py  benchmark_lns.py  best_params.txt  generate_mapf_gpt_data.py  generate_pogema_data.py  optimize_with_optuna.py  output_baseline.txt  output_optimized.txt  output_optimized_400agents.txt  pyproject.toml  test_lns.py  test_priority_learning.py  train_mapf_transformer.py  train_mapf_transformer_profiled.py  train_priority_network.py
.github/workflows/: ci.yml
models/: priority_network.pth
src/pypibt/: dist_table.py  expert_data_generator.py  mapf_tokenizer.py  mapf_transformer.py  pibt.py  pogema_generator.py  priority_net.py  priority_trainer.py
