[project]
name = "pypibt"
version = "0.1.0"
description = "A minimal python implementation of Priority Inheritance with Backtracking (PIBT) for Multi-Agent Path Finding (MAPF)"
authors = [
    { name = "Kei18", email = "keisuke.oku18@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.25.1",
    "jupyterlab>=3.0.0,<4.0.0a0",
    "matplotlib>=3.7.2",
    "pytest>=7.4.0",
]

[dependency-groups]
dev = [
    "jupyterlab-lsp>=4.2.0",
    "jupyterlab-code-formatter>=2.2.1",
    "black>=23.7.0",
    "isort>=5.12.0",
    "pre-commit>=3.3.3",
    "python-lsp-server>=1.7.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pypibt"]
